<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bakalarka</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_all">All</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="textview">Lorem ipsum dolor sit amet, ex eos esse simul, te suas quando laudem nam. Cum no dicta vidisse, his ut timeam indoctum. Ei hinc unum maluisset ius, libris scripta facilis at eum. His dolor integre at, cu sit everti omnesque forensibus.

Sea bonorum quaestio accusamus ut, audire percipit honestatis ad vix. Vix ex fugit congue audiam. Sed te quem labitur appellantur, nam offendit abhorreant moderatius eu. No quo malis recteque, vis legere philosophia ex. Elit ponderum dignissim cu vis, ut has impetus vidisse.

Utinam mentitum an vel, quo ei adhuc commune appetere. Luptatum recteque consectetuer sea ad, nam an imperdiet forensibus. Ius ut brute aeterno, et esse zril mel. Quo ex delectus pericula definitionem, cu ius dicit senserit rationibus, duo scripta civibus contentiones ea. Velit nostrud mentitum no nam.

Elitr tacimates recusabo ut pro, at sed doming doctus. In nam nulla luptatum, ius partem quaestio no. Per esse appareat repudiare ne, aliquando vulputate reprimique nam in. Mei ex alii convenire. Te vix dicta blandit consetetur. Noluisse facilisis cu his, cu pri dicit doming inimicus, veri instructior qui ex.

Vide omnesque copiosae per eu. Facilis deleniti ad sea. Qualisque expetendis mei at. Idque laudem eam te, cu sed facilisis appellantur.</string>
    <string name="add_new_camera">Add new camera</string>
    <string name="add_camera">Add camera</string>
    <string name="camera_name">Název</string>
    <string name="camera_address">Adresa</string>
    <string name="camera_max_fps">Maximalní FPS</string>
    <string name="camera_save">Uložit</string>
    <string name="camera_cancel">Zavřít</string>
    <string name="add_camera_string">Přidat kameru</string>
    <string name="title_activity_manage_cameras">Správa kamer</string>
    <string name="deleted">Smazáno</string>
    <string name="string_export">Export</string>
    <string name="string_import">Import</string>
    <string name="zero_mb">0.0 MB</string>
    <string name="camera_exists">Název nelze použít</string>
    <string name="cams_imported">Kamery byly importovány</string>
    <string name="cams_exported">Uloženo do</string>
    <string name="recreate">Znovu načíst kamery</string>
    <string name="title_activity_test">Test</string>

</resources>