<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_menu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/camera_name_string"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/camera_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/camera_name_string" >

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/sample"
                    android:inputType="text"
                    >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera_address_string"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/camera_name" >

                <TextView
                    android:id="@+id/textAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/camera_address"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera_address"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/camera_address_string" >

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/url_sample"
                    android:inputType="textUri"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/max_fps_string"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/camera_address" >

                <TextView
                    android:id="@+id/fps_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/camera_max_fps"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/max_fps_address"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/max_fps_string" >

                <EditText
                    android:id="@+id/editFPS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="5.0"
                    android:visibility="gone" />

            </LinearLayout>

            <ImageView
                android:id="@+id/cemera_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/max_fps_address"
                android:contentDescription="Image preview"
                android:scaleType="center"
                android:src="@drawable/content_picture_light" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/new_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/darker_gray" >

        <Button
            android:id="@+id/button_add_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@color/button_background_dark"
            android:text="@string/camera_save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_add_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@color/button_background_dark"
            android:text="@string/camera_cancel"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>